--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="css/preset/preset.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <!-- Put CSS Link here!-->
   <title>CSS Practice</title>
 </head>
@@ -22,8 +22,9 @@
     <p>CSS stands for Cascading Style Sheets. We use CSS to apply style and formatting to websites. It is a good practice as a programmer to keep <em>content</em> and <em>styling</em> separate. It helps keep our code organized, easy to read, and reuseble. CSS written for one page can be linked by multiple pages.  Different pages on a website can share a local file, often stored in a CSS subfolder. Different websites can even share CSS that is hosted remotely and accessed when a page loads.</p>
   </div>
   <hr>
-  <div class="info-section">
+  <div class="anExampleClass">
     <h3>Tell me about CSS Syntax...</h3>
+    c
     <p>CSS syntax is very consistent, regardless of what you're styling. The selector chooses the element whose formatting you want to change, in this example, all h1 tags. The declaration explains how to change selected the element.  Here, all h1 tags will have their text changed to blue and the font size set at 12 pixels.</p>
     <img src="images/selector.gif">
     <p>Make sure to add those semi-colons to the end of each declaration!  You can have as many declarations as you like for each selector.</p>
